fix mobile menu z-index

--- a/src/sass/abstracts/variables/_colors.scss
+++ b/src/sass/abstracts/variables/_colors.scss
@@ -16,7 +16,7 @@
 	--hover-color: #65ffba;
 	--bg-color: #21252e;
 	--component-bg-color: #272d3c;
-	--border-color: #352b55;
+	--border-color: #2e3f4d;
 	--shadows: 0 0 2em 0 rgb(0 0 0);
 }
 
