--- a/src/sass/base/elements/_headers.scss
+++ b/src/sass/base/elements/_headers.scss
@@ -2,6 +2,7 @@
 
 .site-header {
 	position: relative;
+	z-index: 99;
 
 	@include m.breakpoint(lg) {
 		flex: 2 0 20%;
